# TradingSystem

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  cmake_install.cmake  main.cpp  test  test.cpp  test.py  tslog.txt
Web/: package-lock.json  package.json  tsconfig.json
Web/src/: App.tsx  DataManipulator.ts  DataStreamer.ts  Graph.tsx
WebServer/: package-lock.json  package.json  server.js  server.ts  tsconfig.json
build-mingw/: Toolchain-mingw.cmake
libs/futu/include/Proto/: GetUserInfo.pb.cc  GetUserInfo.pb.h  Notify.pb.h  Qot_GetBroker.pb.cc  Qot_GetOrderBook.pb.cc  Qot_GetOwnerPlate.pb.cc  Qot_GetPriceReminder.pb.cc  Qot_GetPriceReminder.pb.h  Qot_GetRT.pb.h  Qot_GetSecuritySnapshot.pb.h  Qot_GetTicker.pb.cc  Qot_RequestHistoryKL.pb.cc  Qot_RequestHistoryKL.pb.h  Qot_RequestHistoryKLQuota.pb.h  Qot_UpdateBroker.pb.h  Qot_UpdateKL.pb.cc  Qot_UpdateKL.pb.h  Qot_UpdateOrderBook.pb.cc  Qot_UpdateOrderBook.pb.h  Qot_UpdatePriceReminder.pb.cc  Qot_UpdatePriceReminder.pb.h  Qot_UpdateRT.pb.cc  Qot_UpdateTicker.pb.cc  Trd_Common.pb.cc  Trd_Common.pb.h  Trd_Common.proto  Trd_GetMaxTrdQtys.pb.cc  Trd_GetMaxTrdQtys.pb.h  Trd_GetOrderFee.pb.cc  Trd_GetOrderFee.pb.h  Trd_ModifyOrder.pb.cc  Trd_PlaceOrder.pb.cc
libs/futu/include/futu/: FTAPI.h  Include_FTAPIChannel.h  Include_Proto.h
log4cplus-2.1.1/: Makefile  REVISION  appender_test  appender_testU  config.status  configandwatch_test  configandwatch_testU  customloglevel_test  customloglevel_testU  fileappender_test  fileappender_testU  filter_test  filter_testU  hierarchy_test  hierarchy_testU  libtool  log4cplus.pc  loggingserver  loggingserverU  loglog_test  loglog_testU  ndc_test  ndc_testU  ostream_test  ostream_testU  patternlayout_test  patternlayout_testU  performance_test  performance_testU  priority_test  priority_testU  propertyconfig_test  propertyconfig_testU  socket_test  socket_testU  thread_test  thread_testU  timeformat_test  timeformat_testU  unit_tests  (+1 more)
log4cplus-2.1.1/.libs/: liblog4cplus-2.1.so.9  liblog4cplusU-2.1.so.9  loggingserver  loggingserverU
log4cplus-2.1.1/include/: Makefile
log4cplus-2.1.1/include/log4cplus/: config.h
log4cplus-2.1.1/simpleserver/.deps/: loggingserver.Po  loggingserverU-loggingserver.Po
log4cplus-2.1.1/src/.deps/: liblog4cplusU_la-appender.Plo  liblog4cplusU_la-appenderattachableimpl.Plo  liblog4cplusU_la-asyncappender.Plo  liblog4cplusU_la-callbackappender.Plo  liblog4cplusU_la-clogger.Plo  liblog4cplusU_la-configurator.Plo  liblog4cplusU_la-connectorthread.Plo  liblog4cplusU_la-consoleappender.Plo  liblog4cplusU_la-env.Plo  liblog4cplusU_la-exception.Plo  liblog4cplusU_la-factory.Plo  liblog4cplusU_la-fileappender.Plo  liblog4cplusU_la-fileinfo.Plo  liblog4cplusU_la-filter.Plo  liblog4cplusU_la-global-init.Plo  liblog4cplusU_la-hierarchy.Plo  liblog4cplusU_la-hierarchylocker.Plo  liblog4cplusU_la-layout.Plo  liblog4cplusU_la-lockfile.Plo  liblog4cplusU_la-log4judpappender.Plo  liblog4cplusU_la-logger.Plo  liblog4cplusU_la-loggerimpl.Plo  liblog4cplusU_la-loggingevent.Plo  liblog4cplusU_la-loggingmacros.Plo  liblog4cplusU_la-loglevel.Plo  liblog4cplusU_la-loglog.Plo  liblog4cplusU_la-mdc.Plo  liblog4cplusU_la-ndc.Plo  liblog4cplusU_la-nteventlogappender.Plo  liblog4cplusU_la-nullappender.Plo  liblog4cplusU_la-objectregistry.Plo  liblog4cplusU_la-patternlayout.Plo  liblog4cplusU_la-pointer.Plo  liblog4cplusU_la-property.Plo  liblog4cplusU_la-queue.Plo  liblog4cplusU_la-rootlogger.Plo  liblog4cplusU_la-snprintf.Plo  liblog4cplusU_la-socket-unix.Plo  liblog4cplusU_la-socket-win32.Plo  liblog4cplusU_la-socket.Plo  (+68 more)
log4cplus-2.1.1/tests/: atconfig  atlocal
log4cplus-2.1.1/tests/appender_test/.deps/: main.Po  (+1 more)
logfiles/: log_2024_06_17.txt  log_2024_06_18.txt  log_2024_06_19.txt  log_2024_06_25.txt  log_2024_06_26.txt  log_2024_06_27.txt  log_2024_07_15.txt  log_2024_07_16.txt  log_2024_07_24.txt  log_2024_07_28.txt  log_2024_07_30.txt  log_2024_08_09.txt
src/API/Include/: FTAPI_Define_ProtoID.h  FTSPI.h
src/DataManager/: DataManager.cpp  DataManager.h  DataReader.cpp  DataReader.h  DataWriter.cpp  DataWriter.h  FutuParser.h  LMDBKeys.h  tslmdb.hpp
src/FUTU/: FutuEngine.cpp  FutuEngine.h
src/Helper/: ThreadPool.cpp  ThreadPool.h  ThreadPool.hpp  logger.cpp  logger.h  util.cpp  util.h
src/Interface/: IEngine.cpp  IEngine.h  IMessenger.cpp  IMessenger.h  datastructure.h  datastruture.cpp
src/Strategy/: DualThrust.cpp  DualThrust.h  Strategy.h  StrategyEngine.cpp  StrategyEngine.h  TestStrategy.cpp  TestStrategy.h  TradeUtil.cpp  TradeUtil.h  TradeUtil.hpp
(+194 files in other folders)
